--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-vertical-timeline-component": "^3.6.0",
     "web-vitals": "^2.1.4"
